RESOLVED FIXED313824
[GLib] webkit://gpu: Guard GL queries against missing EGL context
https://bugs.webkit.org/show_bug.cgi?id=313824
Summary [GLib] webkit://gpu: Guard GL queries against missing EGL context
Simon Pena
Reported 2026-05-01 09:36:06 PDT
.
Attachments
Simon Pena
Comment 1 2026-05-01 09:37:59 PDT
EWS
Comment 2 2026-05-05 01:29:30 PDT
Committed 312599@main (f8fc733a908e): <https://commits.webkit.org/312599@main> Reviewed commits have been landed. Closing PR #64050 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.