Cherry-pick 312599@main (f8fc733a908e). https://bugs.webkit.org/show_bug.cgi?id=313824

[GLib] webkit://gpu: Guard GL queries against missing EGL context
    https://bugs.webkit.org/show_bug.cgi?id=313824

    Reviewed by Patrick Griffis.

    On embedded devices without libGL.so.1 or libOpenGL.so.0, calling
    openGLAPI() triggers libepoxy to dlopen those libraries to probe the GL
    type when no EGL context is current, resulting in an abort.

    Guard the openGLAPI() call behind the same eglGetCurrentContext() check
    already used for addEGLInfo(), and show "Not available" when no context
    exists. The render process section still displays GL info from its own
    context via IPC.

    Tested on device without these libraries.

    * Source/WebKit/UIProcess/API/glib/WebKitProtocolHandler.cpp:
    (WebKit::WebKitProtocolHandler::handleGPU):

    Canonical link: https://commits.webkit.org/312599@main

Canonical link: https://commits.webkit.org/305877.477@webkitglib/2.52